# AI_Food_Recommendation_Service

./: .gitignore  CO_SO_LY_THUYET_MO_HINH_GOI_Y_BO_SUNG.docx  CO_SO_LY_THUYET_VA_MO_HINH_GOI_Y_LUAN_VAN.md  HYBRID_RECOMMENDER_DOCUMENTATION.md
recommendation-service/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
recommendation-service/app/: main.py
recommendation-service/app/api/v1/: feedback.py  health.py  recommendations.py
recommendation-service/app/core/: config.py  dependencies.py
recommendation-service/app/db/: session.py
recommendation-service/app/db/repositories/: recommendation_repository.py
recommendation-service/app/features/: context_features.py  food_features.py  user_features.py
recommendation-service/app/jobs/: stats_refresh.py
recommendation-service/app/ranking/: filters.py  rerank.py  scorer.py
recommendation-service/app/recommenders/: content_based.py  fallback.py  hybrid.py  popular.py  user_profile.py
recommendation-service/app/schemas/: request.py  response.py
recommendation-service/app/services/: cache_service.py  recommendation_service.py
recommendation-service/food_recommendation_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
recommendation-service/tests/: test_api.py  test_ranking.py  test_repositories.py
